deploy/deploy/ingress_alb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bold-ingress
  namespace: bold-services
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    #alb.ingress.kubernetes.io/certificate-arn: Amazon Resource Name (ARN) of the Certificate
    #alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
spec:
  #tls:
  #- hosts:
    #- example.com
    #secretName: bold-tls
  rules:
  - #host: example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: id-web-service
            port:
              number: 6000
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: id-api-service
            port:
              number: 6001
      - path: /ums
        pathType: Prefix
        backend:
          service:
            name: id-ums-service
            port:
              number: 6002
      - path: /bi
        pathType: Prefix
        backend:
          service:
            name: bi-web-service
            port:
              number: 6004
      - path: /bi/api
        pathType: Prefix
        backend:
          service:
            name: bi-api-service
            port:
              number: 6005
      - path: /bi/jobs
        pathType: Prefix
        backend:
          service:
            name: bi-jobs-service
            port:
              number: 6006
      - path: /bi/designer
        pathType: Prefix
        backend:
          service:
            name: bi-dataservice-service
            port:
              number: 6007
